--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,7 +302,7 @@ button,
 input,
 select,
 textarea {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Crimson Text', serif;
 }
 a {
   color: inherit;
@@ -327,7 +327,7 @@ h6,
 .h6 {
   clear: both;
   color: #202b36;
-  font-family: 'Roboto', sans-serif;
+  font-family: inherit;
   font-weight: 500;
 }
 h1,
